         distros (patch #2533274) (José Manuel Ferrer Ortiz).
20090411 doc/libspectrum.txt,tape.c: add a new tape flag for end of tape
         (part of fixes for bug #2743838) (Fred).
20090411 libspectrum.h.in: export new end of tape flag.
20090509 tape_block.c: handle querying the block length for turbo and pure data
         blocks with 0 length (Fred).
20090608 accessor.pl,doc/libspectrum.txt,libspectrum.c,snap_accessors.txt,
         snapshot.c,szx.c,z80.c: add support for the Fuller Box in snapshots
         (Fred).
20090610 accessor.pl,doc/libspectrum.txt,libspectrum.c,snap_accessors.txt,
         snapshot.c,szx.c,z80.c: add support for the Melodik and similar AY
         interfaces (feature request #1841501) (Fred).
20090611 sna.c: note info loss of Fuller or Melodik info when writing sna
         format snapshots (Fred).
20090627 doc/libspectrum.txt,libspectrum.h.in,make-perl.c,myglib/gslist.c,
         tape.c,tzx_write.c,warajevo_read.c: fix loading Warajevo TAPs of raw
         samples (e.g. BRUCELEE.TAP) (Fred).
20090729 accessor.pl,libspectrum.c,libspectrum.h.in,sna.c,snap_accessors.txt,
         snapshot.c,szx.c,z80.c: add snapshot support for Opus Discovery
         (Fred & Gergely).
20090901 dck.c,rzx.c,snapshot.c,tape.c: give up if file decompression fails
         (Fred).
20090901 rzx.c,snapshot.c,tape.c: remove unused uncompressed variable (Fred).
20090901 plusd.c: remove unused buffer modification in
         libspectrum_plusd_read_header (Fred).
20090901 szx.c: remove unused block_size initialisation (Fred).
20090902 plusd.c: return error from libspectrum_plusd_read_data (Fred).
20090912 szx.c: libspectrum was reading and writing AF and AF' in the wrong
         order in SZX files (fixes bug #2857419; thanks, velesoft) (Fred).
20091022 wav.c: we expect mono sound files, tell audiofile to make the required
         adjustments (fixes bug #2883135; thanks, Gilberto Almeida) (Fred).