@@ -81,13 +81,6 @@ libspectrum_uncompress_file( unsigned char **new_buffer, size_t *new_length,
 			     size_t old_length, const char *old_filename );
 
 libspectrum_error
-libspectrum_zlib_inflate( const libspectrum_byte *gzptr, size_t gzlength,
-			  libspectrum_byte **outptr, size_t *outlength );
-libspectrum_error
-libspectrum_zlib_compress( const libspectrum_byte *data, size_t length,
-			   libspectrum_byte **gzptr, size_t *gzlength );
-
-libspectrum_error
 libspectrum_gzip_inflate( const libspectrum_byte *gzptr, size_t gzlength,
 			  libspectrum_byte **outptr, size_t *outlength );
 
